user see warehouse details and can return to homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <h2>Não existem galpões cadastrados</h2>
 <% end %>
 <% @warehouses.each do |warehouse| %>
-    <h2><%= warehouse.name%></h2>
+    <%= link_to warehouse.name, warehouse_path(warehouse.id)%>
     <p>código: <%= warehouse.code%></p>
     <p>cidade: <%= warehouse.city%></p>
     <p><%= warehouse.area%> m2</p>
