--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 
   <body>
     <header><h1>Galpões & Estoque</h1></header>
+    <div>
+        <%= notice %>
+    </div>
     <main><%= yield %></main>
   </body>
 </html>
