feat: user can delete a warehouse

--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -1,5 +1,6 @@
 <%= link_to 'voltar', root_path%>
 <%= link_to 'Editar', edit_warehouse_path(@warehouse.id)%>
+<%= link_to 'Remover', warehouse_path(@warehouse.id), data: {turbo_method: :delete}%>
 
 <h1>Galpão <%= @warehouse.code%></h1>
 <h2><%= @warehouse.description %></h2>
