user can see suppliers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <header><h1>Galpões & Estoque</h1></header>
+    <nav><%= link_to 'Fornecedores', suppliers_path%></nav>
     <div>
         <%= notice %>
     </div>
