feat: user can register a new supplier

--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,3 +1,5 @@
+<h1>Fornecedor</h1>
+<%= link_to 'Cadastrar fornecedor', new_supplier_path%>
 <% if @suppliers.empty? %>
     <p>Nenhum fornecedor cadastrado</p>
 <% else %>
