--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Fornecedores <%= @supplier.brand_name %></h1>
+<%= link_to 'Editar', edit_supplier_path(@supplier.id)%>
 <p><%= @supplier.corporate_name %></p>
 <dl>
     <dt>
