--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 
   <body>
     <header><h1>Galpões & Estoque</h1></header>
-    <nav><%= link_to 'Fornecedores', suppliers_path%></nav>
+    <nav>
+      <%= link_to 'Fornecedores', suppliers_path%>
+      <%= link_to 'Modelos de Produtos', product_models_path%>
+    </nav>
     <div>
         <%= notice %>
     </div>
