--- a/app/views/product_models/index.html.erb
+++ b/app/views/product_models/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Modelos de Produtos</h1>
-
+<%= link_to 'Cadastrar modelo de produto', new_product_model_path%>
 <% if @product_models.any?%>
     <%@product_models.each do |pm|%>
         <div>
