--- a/app/views/product_models/new.html.erb
+++ b/app/views/product_models/new.html.erb
@@ -37,7 +37,7 @@
     </div>
     <div>
         <%= f.label :supplier_id%>
-        <%= f.collection_select :supplier_id, @suppliers, :id, :brand_name%>
+        <%= f.collection_select :supplier_id, @suppliers, :id, :description%>
     </div>
     <%= f.submit 'Enviar'%>
 
